Primer commit en clase

--- a/Ejercicio 1_app mov_Rolando.html
+++ b/Ejercicio 1_app mov_Rolando.html
@@ -1,15 +1,15 @@
 <!DOCTYPE>
+<html>
 <head>
     <title>Bienvenido a mi sitio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 
 <body>
-    <div>
+    <div style="text-align:center;">
         <h3>Bienvenido a mi sitio web, pasale pariente!</h3>
-    <button class="btn btn-sucess" type="button" onmousemove="showMessage()">Dale click</button>
+        <button class="btn btn-sucess" type="button" onclick="showMessage()">Dale click</button>
     </div>
-    
 </body>
 
 <script>
@@ -18,6 +18,8 @@
         debugger;
         var x=10;
         var y=20;
-        alert("Hola mundo, desde Javascript, la suma es:"+(x+y));
+        alert("Hola mundo, desde Javascript, la suma es: " + (x+y));
     }
 </script>
+
+</html>
